sample/misc/error/wip/eval_wtd-pair.bfr
(* to_pair は現在使われていない
   昔はビルトイン関数 fst と snd で使っていた
*)

codegen []